--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">    
     <link rel="stylesheet" href="materialize.min.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="fontawesome.css">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -16,9 +17,9 @@
         <nav class="#4a148c purple darken-4">
             <div class="nav-wrapper container">
                 <a href="#" class="brand-logo hide-on-small-only" id="logo-container"><i class="material-icons">important_devices</i> Teens IN Tech</a>
-                <a href="#" class="brand-logo hide-on-med-and-up" id="logo-container"><i class="material-icons">important_devices</i> T n T</a>  
+                <a href="#" class="brand-logo hide-on-med-and-up left" id="logo-container"><i class="material-icons">important_devices</i> TnT</a>  
                 <ul class="right">
-                    <li><a class="white-text center" style="font-size:20px;" href="mailto:dandons25@gmail.com?Subject=Hello%20again" target="_top">Mail Us</a></li>
+                    <li><a class="white-text center" style="font-size:20px;" href="mailto:dandons25@gmail.com?Subject=Hello%20again" target="_top"><i class="material-icons">mail</i></a></li>
                 </ul>
             
             </div>
@@ -69,8 +70,12 @@
             <p class="height-space"></p>
             <p class="flow-text #ff5252 red-text accent-2 container" id="first-desc" style="font-size:35px;">Our Mission</p>
             <blockquote id="first-desc">
-                This is a platform that promotes teenage coding by organsing offline and online meet-ups, healthy competions, expose potentials
-                to tech industries and companies, and overall build a communitie to solve challenges and tackle discusion topics together.
+
+                OUr mission is to reach as many teenagers as we posibly can in nigeria and beyound who have their interest 
+                in technology, and help them get started or boost their growth. We do this by connecting them to mentors
+                 who are experts in their various fields and exposing them to real life experiences.  We strongly beleive that 
+                 many teens want to thrive in the tech industries but lack the neccessary support to get started, with the help of our partners 
+                 we hope to provide support to as many as we possibly can!
             </blockquote>
 
             <p class="height-space"></p>
@@ -125,12 +130,14 @@
                     <div class="card-content">
                         <p class="card-title font">Be A Mentor</p>
                         <p class="font">
-                            22yrs and older programmers who love to mentor younger ones can register as mentors and have fun as they raise amazing talents into something world class!                        </p>
+                            22yrs and older programmers who love to mentor younger ones can register as mentors and have fun as they raise amazing talents into world class skills!</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <a href="https://www.instagram.com/teens_in_tech/?hl=en" target="_blank" id="insta-icon" title="Join our growing community on Instagram" class="fa-instagram"></a>
 
     <div class="row partner-subscribe gradient-45deg-indigo-light-blue">
         <div class="col s11 m7 l7">
@@ -156,11 +163,12 @@
     </div>
 
     <footer class="grey lighten-2 landing-footer">
-        <p class="section">&copy TCC, 2018.</p>
+        <p class="section">&copy TnC, 2018.</p>
     </footer>
 
     <script src="jquery-3.3.1.min.js"></script>
-    <script src="js.js"></script>    
+    <script src="js.js"></script>  
+    <script src="fontawesome.js"></script>    
     <script src="materialize.min.js"></script>
     <script src="init.js"></script>    
 </body>
