--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
     </div>
 
-    <a href="https://www.instagram.com/teens_in_tech/?hl=en" target="_blank" id="insta-icon" title="Join our growing community on Instagram" class="fa-instagram"></a>
+    <a href="https://www.instagram.com/teens_in_tech/?hl=en" target="_blank" id="insta-icon" title="Join our growing community on Instagram" class="fa fa-instagram"></a>
 
     <div class="row partner-subscribe gradient-45deg-indigo-light-blue">
         <div class="col s11 m7 l7">
