--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">    
     <link rel="stylesheet" href="materialize.min.css">
     <link rel="stylesheet" href="style2.css">
-    <link rel="stylesheet" href="fontawesome.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
@@ -168,7 +168,6 @@
 
     <script src="jquery-3.3.1.min.js"></script>
     <script src="js.js"></script>  
-    <script src="fontawesome.js"></script>    
     <script src="materialize.min.js"></script>
     <script src="init.js"></script>    
 </body>
