--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="shortcut icon" href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2014-12-19/8fd729bf8fc2b8b25b04ebb68cfc7fdd.ico" type="image/x-icon">
+    <link rel="icon" href="https://favicon-generator.org/favicon-generator/htdocs/favicons/2014-12-19/8fd729bf8fc2b8b25b04ebb68cfc7fdd.ico" type="image/x-icon">
 </head>
 <body>
     <div class="navbar-fixed purple">
