--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
     <div class="row">
         <div class="col s10 m6 l6">
             <blockquote id="first-desc">
-                This is an organisation that promotes teenage involvement in technology, this is archieved by organsing meet-ups, healthy competions, expose potentials
-                to tech industries and companies, and overall build a community to solve challenges and tackle discusion topics together.
+                This is an organisation that promotes teenage involvement in technology, this is achieved by organsing meet-ups, healthy competitions, expose potentials
+                to tech industries and companies, and overall, build a community to solve challenges and tackle discusion topics together.
             </blockquote>
 
             <p class="height-space"></p>
             <p class="flow-text #ff5252 red-text accent-2 container" id="first-desc" style="font-size:35px;">Our Mission</p>
             <blockquote id="first-desc">
 
-                OUr mission is to reach as many teenagers as we posibly can in nigeria and beyound who have their interest 
+                OUr mission is to reach as many teenagers as we posibly can in Nigeria and beyound who have their interest 
                 in technology, and help them get started or boost their growth. We do this by connecting them to mentors
                  who are experts in their various fields and exposing them to real life experiences.  We strongly beleive that 
                  many teens want to thrive in the tech industries but lack the neccessary support to get started, with the help of our partners 
@@ -146,7 +146,7 @@
             <p class="center"><i class="material-icons white-text" style="font-size:60px;">settings_input_component</i></p>
             <h4 class="flow-text center">Be A Partner</h4>
             <p>
-                    partner with us today and join in the movement to bring more people into technology from a young age and encourage healthy competitions 
+                    Partner with us today and join in the movement to bring more people into technology from a young age and encourage healthy competitions 
                     among our talents. Our vision is to equip the teenager with neccessary materials to foaster learning and mastery in their crafts.
                     support us today! take pride that you helped build tomorrows future!
             </p>
